--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       <% } %> <% } %>
     <title>梧桐综合业务支撑平台</title>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-    <script type = "text/javascript">
+    <!-- <script type = "text/javascript">
       (function() {
         if (window.zhuge) return;
         window.zhuge = [];
@@ -71,7 +71,7 @@
           singlePage: false //是否是单页面应用（SPA），启用autoTrack后生效（选填，默认false）
         });
       })();
-    </script>
+    </script> -->
     <!-- GrowingIO Analytics code version 2.1 -->
     <!-- Copyright 2015-2018 GrowingIO, Inc. More info available at http://www.growingio.com -->
     <!-- <script type='text/javascript'>
@@ -83,12 +83,12 @@
       //custom page code end here
       gio('send');
     </script> -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       !function(e,t,n,g,i){e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},n=t.createElement("script"),tag=t.getElementsByTagName("script")[0],n.async=1,n.src=('https:'==document.location.protocol?'https://':'http://')+g,tag.parentNode.insertBefore(n,tag)}(window,document,"script","assets.giocdn.com/2.0/gio-wxwv.js","gio");
       // ‘你的appid’为选填项，如果你的微信内嵌页应用有微信分配的appid，建议填写；如果没有，可以留空。
       gio('init', 'a406c1da5dbda072', '', { debug: false });
       gio('send');
-    </script>
+    </script> -->
     <!-- End GrowingIO Analytics code version: 2.1 -->
   </head>
   <body>
